--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -12,6 +12,8 @@
     ]
   },
   "dependencies": {
+    "@aws-sdk/client-dynamodb": "^3.767.0",
+    "@aws-sdk/lib-dynamodb": "^3.767.0",
     "sst": "*"
   },
   "devDependencies": {
